--- a/content/data/pageData.yaml
+++ b/content/data/pageData.yaml
@@ -1,2 +1,2 @@
-- welcomeText : WELCOME TO KRISP
-  landingText : We are a creative group of people who design awesome templates and powerful brands.
+- welcomeText : LET'S BUILD SOMETHING GREAT TOGETHER
+  landingText : We create beautiful, dynamic software to transform your business.
