--- a/content/data/services.yaml
+++ b/content/data/services.yaml
@@ -1,8 +1,12 @@
-- title: Branding
-  src: https://image.flaticon.com/icons/svg/65/65508.svg
-- title: Design
-  src: https://image.flaticon.com/icons/svg/86/86998.svg
-- title: Development
-  src: https://image.flaticon.com/icons/svg/69/69045.svg
-- title: Illustration
-  src: https://image.flaticon.com/icons/svg/45/45954.svg
+- title: Web Apps
+  desc: Blazing fast, modern browser applications that run on any device
+  index: 1
+- title: Mobile Apps
+  desc: Cross-platform applications with a single code base for every platform
+  index: 3
+- title: Cloud Apps
+  desc: Advanced software that automatically scales with your buisiness
+  index: 2
+- title: APIs
+  desc: Access, share, and transform your data accross your organization
+  index: 0
