--- a/content/data/services.yaml
+++ b/content/data/services.yaml
@@ -8,5 +8,5 @@
   desc: Advanced software that automatically scales with your buisiness
   index: 2
 - title: APIs
-  desc: Access, share, and transform your data accross your organization
+  desc: Access, transform, and share your data accross your organization
   index: 0
