added spotlight; working on style

--- a/content/data/offerings.yaml
+++ b/content/data/offerings.yaml
@@ -1,5 +1,5 @@
 - name: Brand New Apps
-  desc: Looking to make something from scratch? No problem. We can take your new concept from concecpt to code
+  desc: Looking to make something from scratch? No problem. We can take your idea from concecpt to code
 - name: Performance & UI Upgrades
   desc: Is your project not looking or running as snappy as it could be? That's where we come in. 
 - name: Microservices
