--- a/content/data/offerings.yaml
+++ b/content/data/offerings.yaml
@@ -1,8 +1,8 @@
 - name: Brand New Apps
   desc: Looking to make something from scratch? No problem. We can take your idea from concecpt to code
 - name: Performance & UI Upgrades
-  desc: Is your project not looking or running as snappy as it could be? That's where we come in. 
+  desc: Is your project not looking or running as snappy as it could be? That's where we come in
 - name: Microservices
-  desc: Don't start from scratch. We'll intigrate your new service directly into your app, just like it's always been there.
+  desc: Don't start from scratch. We'll intigrate your new service directly into your app, just like it's always been there
 - name: Hourly Help
-  desc: We can hit the ground running on whatever you're developing to deliver on time and on budget.
+  desc: We can hit the ground running on whatever you're developing to deliver on time and on budget
