--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "focus-trap-react": "^8.9.0",
     "gatsby": "^2.13.25",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-offline": "^2.2.4",
