--- a/content/data/services.yaml
+++ b/content/data/services.yaml
@@ -1,12 +1,12 @@
 - title: Web Apps
   desc: Blazing fast, modern browser applications that run on any device
-  index: 4
+  image: app.png
 - title: Mobile Apps
   desc: Cross-platform applications with a single code base for every platform
-  index: 6
+  image: mobile.png
 - title: Cloud Apps
   desc: Advanced software that automatically scales with your buisiness
-  index: 5
+  image: cloud.png
 - title: APIs
   desc: Access, transform, and share your data accross your organization
-  index: 3
+  image: api.png
